--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-	<title>Practice</title>
+	<title>94</title>
 
 <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
 <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
@@ -17,7 +17,7 @@
 <body>
 <div class="container">
 	
-	<h1>Practice Activity</h1>
+	<h1>Project 94</h1>
 
 		<div class="form-group">
 		  <label >User Name:</label>
